WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113709
[WK2] Sandbox extension tracking is incorrect when restoring a session
https://bugs.webkit.org/show_bug.cgi?id=113709
Summary
[WK2] Sandbox extension tracking is incorrect when restoring a session
Alexey Proskuryakov
Reported
2013-04-01 10:45:48 PDT
When a session is restored, a load is sometimes started and immediately replaced with another one. This erroneously clears pending provisional sandbox extension. <
rdar://problem/13490123
>
Attachments
proposed fix
(3.52 KB, patch)
2013-04-01 10:53 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-04-01 10:53:33 PDT
Created
attachment 195993
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-04-01 11:04:34 PDT
Committed <
http://trac.webkit.org/changeset/147344
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug