        <rdar://problem/13490123> Sandbox extension tracking is incorrect when restoring a session         https://bugs.webkit.org/show_bug.cgi?id=113709

Reviewed by Anders Carlsson.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::SandboxExtensionTracker::didStartProvisionalLoad): Added an assertion
        to catch extension tracking logic errors that could result in giving an extension to
        non-local pages.
        (WebKit::WebPage::SandboxExtensionTracker::didCommitProvisionalLoad): Just like
        below, clearing m_pendingProvisionalSandboxExtension appears incorrect, even though
        I am not aware of any scenarios where this happens in practice.
        (WebKit::WebPage::SandboxExtensionTracker::didFailProvisionalLoad): The load may
        be failing exactly because a new one cancels it, so we shouldn't be preventing
        the new one from using its extension.



Canonical link: https://commits.webkit.org/132031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147344 268f45cc-cd09-0410-ab3c-d52691b4dbfc